--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
-    <title>营销管理系统</title>
+    <title>数据中心</title>
     <meta
       name="keywords"
-      content="营销管理系统"
+      content="数据中心"
     />
     <meta
       name="description"
